--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>My React Solo Project</title>
+    <title>Alpha Trade</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -18,6 +18,8 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" type="image/png" href="https://res.cloudinary.com/dan-purcell-2021/image/upload/v1637597780/robinhood_clone/favicon-img_rp0qnj.png"/>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
